--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
     </head>
     <body>
         <center>
-            <h1>School Web Project - About</h1>
+            <h1>Miley Construction - About</h1>
             <hr color="black">
             <nav>
                 <a href="index.html">Home |</a>
                 <a href="about.html"> About |</a>
                 <a href="https://github.com/HaxeFloppa/HaxeFloppa.github.io"> Source Code</a>
             </nav>
-            <p><i>test still :p</i></p>
+            <p><i><b>Miley Construction</b> is an old-fashioned construction company <br> lead by <b>John A Miley</b>. </i></p>
         </center>
     </body>
 </html>
