--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     </head>
     <body>
         <center>
-            <h1>School Web Project - Home</h1>
+            <h1>Miley Construction - Home</h1>
             <hr color="black">
             <nav>
                 <a href="index.html">Home |</a>
                 <a href="about.html"> About |</a>
                 <a href="https://github.com/HaxeFloppa/HaxeFloppa.github.io"> Source Code</a>
+                <p><i>“We shape our buildings; thereafter, they shape us.” – Winston Churchill</i></p>
+                <img href="/images/miley construction.jpg" alt="Business Logo">
             </nav>
-            <p><i>test still :p</i></p>
         </center>
     </body>
 </html>
