--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <a href="about.html"> About |</a>
                 <a href="https://github.com/HaxeFloppa/MileyConstruction.github.io"> Source Code</a>
             </nav>
-            <p><i><b>Miley Construction</b> is an old-fashioned construction company <br> lead by <b>John A Miley</b>. </i></p>
+            <p>Michael Miley Contracting Services (also known as Miley Construction) is an irish construction Company<br>owned by Michael Miley.</p>
         </center>
     </body>
 </html>
