--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
                 <a href="index.html">Home |</a>
                 <a href="about.html"> About |</a>
                 <a href="https://github.com/HaxeFloppa/MileyConstruction.github.io"> Source Code</a>
-                <p><i>“We shape our buildings; thereafter, they shape us.” – Winston Churchill</i></p>
-                <img href="/images/miley construction.jpg" alt="Business Logo">
             </nav>
+            <p><i>“We shape our buildings; thereafter, they shape us.” – Winston Churchill</i></p>
+            <img href="/images/miley construction.jpg" alt="Business Logo">
+            <h2>Michael Miley Contracting Services Ltd</h2>
+            <p><i>For Customer service please call the office on 059 91 46375 or Michael on the 086 2526 369.</i></p>
         </center>
     </body>
 </html>
