--- a/about.html
+++ b/about.html
@@ -20,6 +20,19 @@
                 <a href="https://github.com/HaxeFloppa/MileyConstruction.github.io"> Source Code</a>
             </nav>
             <p>Michael Miley Contracting Services (also known as Miley Construction) is an irish construction Company<br>owned by Michael Miley.</p>
+            <h3>Our company does:</h3>
+            <li>
+                New Builds
+                Extensions
+                Renovations
+                Refurbishments
+                Full Carpentry Service
+                Roofing
+                Slating
+                Tiling
+                1st & 2nd Fix
+                Door Replacement
+            </li>
         </center>
     </body>
 </html>
