--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
             <p><i>“We shape our buildings; thereafter, they shape us.” – Winston Churchill</i></p>
             <img href="/images/miley construction.jpg" alt="Business Logo">
-            <h2>Michael Miley Contracting Services Ltd</h2>
+            <h2><b>Michael Miley Contracting Services Ltd</b></h2>
             <p><i>For Customer service please call the office on 059 91 46375 or Michael on the 086 2526 369.</i></p>
         </center>
     </body>
